--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -17,7 +17,7 @@
     --smoke-color: #F8F8F8;
     --smoke-color2: #ECF1FF;
     --black-color: #000000;
-    --black-color2: #04425b;
+    --black-color2: #ffffff;
     --gray-color: #bdbdbd;
     --white-color: #ffffff;
     --body-bg: #E1E4E5;
